--- a/src/main/resources/templates/recolte/recolteHausseForm.html
+++ b/src/main/resources/templates/recolte/recolteHausseForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsruches}"></script>
@@ -35,17 +35,18 @@
 	<form action="#" th:action="@{/recolte/detail/sauve}"
 		th:object="${detailRecolte}" method="post" id="recolteHausseForm">
 		<input type="hidden" th:field="*{id}"> <input type="hidden"
-			th:field="*{recolte}" /> <input type="hidden" th:field="*{hausse}">
+			th:field="*{recolte}"> <input type="hidden"
+			th:field="*{hausse}">
 		<div class="form-floating mb-3">
 			<input class="form-control" placeholder="" type="number"
 				th:min="${detailRecolte.hausse.poidsVide}" max="80" step="0.001"
-				th:field="*{poidsAvant}" th:errorclass="fieldError" /> <label
+				th:field="*{poidsAvant}" th:errorclass="fieldError"> <label
 				class="form-label" th:text="#{poidsAvant}" for="poidsAvant"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<input class="form-control" placeholder="" type="number"
 				th:min="${detailRecolte.hausse.poidsVide}" max="80" step="0.001"
-				th:field="*{poidsApres}" th:errorclass="fieldError" /> <label
+				th:field="*{poidsApres}" th:errorclass="fieldError"> <label
 				class="form-label" th:text="#{poidsApres}" for="poidsApres"></label>
 		</div>
 		<button type="button" id="toggleplus" th:text="#{plus}"></button>
