--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
@@ -29,7 +29,6 @@
 					}
 				}
 			});
-
 			$('#date').datetimepicker({
 				minDate: dateFirst,
 				minTime: timeFirst
@@ -61,7 +60,7 @@
 				th:field="${ruche.rucher}">
 				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
 					th:text="${rucheropt.nom}"></option>
-			</select> <label class="form-label" for="rucher" th:text="#{rucher}"></label>
+			</select> <label class="form-label" for="rucherId" th:text="#{rucher}"></label>
 		</div>
 		<div th:replace="~{includeForm :: commentaire}"></div>
 		<div th:replace="~{includeForm :: BtnForm}"></div>
