--- a/src/main/resources/templates/ruche/rucheCadreForm.html
+++ b/src/main/resources/templates/ruche/rucheCadreForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsdatetimepicker}"></script>
@@ -56,7 +56,7 @@
 		<div th:replace="~{includeForm :: dateField}"></div>
 		<div class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="text"
-				th:field="*{valeur}" /> <label class="form-label"
+				th:field="*{valeur}"> <label class="form-label"
 				th:text="#{nbCadres}+
 				(${evenement.ruche?.type?.nbCadresMax}?' ('+${evenement.ruche?.type?.nbCadresMax}+'max)':'')
 				"
