--- a/src/main/resources/templates/resetPasswordForm.html
+++ b/src/main/resources/templates/resetPasswordForm.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 </head>
@@ -11,7 +11,7 @@
 		<div class="mb-3">
 			<label class="form-label" for="password" th:text="#{motDePasse}"></label>
 			<input type="password" class="form-control" id="password"
-				name="password" value="" autofocus />
+				name="password" value="" autofocus>
 		</div>
 		<br>
 		<div class="mb-3">
