--- a/src/main/resources/templates/rucher/rucherMeteo.html
+++ b/src/main/resources/templates/rucher/rucherMeteo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsChart}"></script>
@@ -49,7 +49,7 @@ th {
 			<h1 class="accordion-header">
 				<button class="accordion-button collapsed" type="button"
 					data-bs-toggle="collapse" data-bs-target="#collapse1"
-					aria-expanded="true" aria-controls="collapse0"
+					aria-expanded="true" aria-controls="collapse1"
 					th:text="#{aujourdhui}"></button>
 			</h1>
 			<div id="collapse1" class="accordion-collapse collapse show"
@@ -143,7 +143,7 @@ th {
 			<h1 class="accordion-header">
 				<button class="accordion-button collapsed" type="button"
 					data-bs-toggle="collapse" data-bs-target="#collapse2"
-					aria-expanded="true" aria-controls="collapse0"
+					aria-expanded="true" aria-controls="collapse2"
 					th:text="#{TempPress}"></button>
 			</h1>
 			<div id="collapse2" class="accordion-collapse collapse"
@@ -157,7 +157,7 @@ th {
 			<h1 class="accordion-header">
 				<button class="accordion-button collapsed" type="button"
 					data-bs-toggle="collapse" data-bs-target="#collapse3"
-					aria-expanded="true" aria-controls="collapse0"
+					aria-expanded="true" aria-controls="collapse3"
 					th:text="#{previsions}"></button>
 			</h1>
 			<div id="collapse3" class="accordion-collapse collapse"
@@ -189,7 +189,7 @@ th {
 			<h1 class="accordion-header">
 				<button class="accordion-button collapsed" type="button"
 					data-bs-toggle="collapse" data-bs-target="#collapse4"
-					aria-expanded="true" aria-controls="collapse0"
+					aria-expanded="true" aria-controls="collapse4"
 					th:text="#{historique}"></button>
 			</h1>
 			<div id="collapse4" class="accordion-collapse collapse"
