--- a/src/main/resources/templates/rucher/ruchersListe.html
+++ b/src/main/resources/templates/rucher/ruchersListe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="fr">
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:inline="javascript">
@@ -51,9 +51,9 @@
 					th:title="#{ajouterRucher}" aria-hidden="true"></a> &nbsp; <a
 					th:href="@{/rucher/Gg}" class="bi-google" th:title="#{carteGg}"
 					aria-hidden="true"></a> <a th:href="@{'/rucher/Ign'}"
-					th:title="#{carteIgn}" aria-hidden="true"><img
-					th:src="@{'/images/france.svg'}" style="margin-bottom: 2px;" /></a> <a
-					th:href="@{/rucher/Osm}" class="bi-globe" th:title="#{carteOsm}"
+					th:title="#{carteIgn}" aria-hidden="true"><img alt="France"
+					th:src="@{'/images/france.svg'}" style="margin-bottom: 2px;"></a>
+				<a th:href="@{/rucher/Osm}" class="bi-globe" th:title="#{carteOsm}"
 					aria-hidden="true"></a> &nbsp; <a th:href="@{/rucher/statistiques}"
 					class="bi-table" th:title="#{statistiquesruchers}"
 					aria-hidden="true"></a> &nbsp; <a
