evenementSucre Grouper, infobulle et doc

--- a/src/main/resources/templates/evenement/evenementSucreListe.html
+++ b/src/main/resources/templates/evenement/evenementSucreListe.html
@@ -33,7 +33,7 @@
 			<div class="col">
 				<span class="padicons"> <input form="evenementForm"
 					type="checkbox" id="groupe" name="groupe" th:checked="${groupe}">
-					<label for="groupe" th:text="#{grouper}" th:title="#{GrouperTrt}"></label>
+					<label for="groupe" th:text="#{grouper}" th:title="#{GrouperSucre}"></label>
 				</span>
 			</div>
 			<div
