liste des événements Ajout essaim ruche avec option grouper

--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -63,6 +63,8 @@
 								th:href="@{/evenement/hausse/listeRemplissageHausse}"></a></li>
 							<li><a class="dropdown-item" th:text="#{PoseRetraitHausse}"
 								th:href="@{/evenement/hausse/poseRetraitHausse}"></a></li>
+							<li><a class="dropdown-item" th:text="#{EssaimRuche}"
+								th:href="@{/evenement/essaim/ajouteEssaimRuche}"></a></li>
 						</ul></li>
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" id="navbarDropdown3"
