--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -125,13 +125,9 @@
 			<a th:if="${type}==''" th:href="@{'/evenement/liste'}"
 				th:text="#{evenements}"></a> <a th:if="${type=='sucre'}"
 				th:href="@{'/evenement/essaim/listeSucre'}"
-				th:text="#{evenementssucre}"></a> 
-				
-				<a th:if="${type=='traitement'}"
+				th:text="#{evenementssucre}"></a> <a th:if="${type=='traitement'}"
 				th:href="@{'/evenement/essaim/listeTraitement'}"
-				th:text="#{evenementstraitement}"></a> 
-				
-				<a th:if="${type=='poids'}"
+				th:text="#{evenementstraitement}"></a> <a th:if="${type=='poids'}"
 				th:href="@{'/evenement/ruche/listePoidsRuche'}"
 				th:text="#{evenementspoidsruche}"></a> <a th:if="${type=='cadre'}"
 				th:href="@{'/evenement/ruche/listeCadreRuche'}"
@@ -145,7 +141,10 @@
 				th:text="#{evenementremplissagehausse}"></a> <a
 				th:if="${type=='ajouthausse'}"
 				th:href="@{'/evenement/hausse/poseRetraitHausse'}"
-				th:text="#{evtsPoseRetraitHausses}"></a>
+				th:text="#{evtsPoseRetraitHausses}"></a> <a
+				th:if="${type=='essaimruche'}"
+				th:href="@{'/evenement/essaim/ajouteEssaimRuche'}"
+				th:text="#{evtsAjouteEssaimRuche}"></a>
 			<th:block
 				th:text="#{sep}+${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"></th:block>
 		</h1>
