--- a/src/main/resources/templates/evenement/evenementEssaimRucheListe.html
+++ b/src/main/resources/templates/evenement/evenementEssaimRucheListe.html
@@ -7,7 +7,7 @@
 <link th:replace="~{include :: cssjquerydaterangepicker}">
 <script th:replace="~{include :: jsruchesnom('evenementListe')}"></script>
 <script th:inline="javascript">
-		/* exported Evenements, buttTxtPrint, buttTxtCol */
+		/* exported Evenements, buttontextprint, buttontextcol */
 		/* globals evenementListe */
 		const Evenements = /*[[#{evenementsessaimruche}]]*/null;
 		const buttontextprint = /*[[#{buttontextprint}]]*/null;
