--- a/src/main/resources/templates/rucher/ruchersListeOsm.html
+++ b/src/main/resources/templates/rucher/ruchersListeOsm.html
@@ -3,7 +3,13 @@
 <head
 	th:replace="~{include :: common_header(~{::script},~{::style},~{::link})}">
 <script th:replace="~{include :: jsol}"></script>
+
+<!-- 
 <script th:replace="~{include :: jsGpOsmPluginOpenLayers}"></script>
+ -->
+<script th:replace="~{include :: jsOsmIgnExtOl}"></script>
+
+
 <script th:replace="~{include :: jsruchesnom('rucherListeOl')}"></script>
 <script th:inline="javascript">
 		/* exported ol, ruchers, nomRuches, lesRucherstxt,	lesRuchestxt, pasderuchetxt, 
@@ -23,7 +29,14 @@
 		document.addEventListener('DOMContentLoaded', () => rucherListeIgn(false));
 	</script>
 <script th:replace="~{include :: cssol}"></script>
+
+<!--
 <script th:replace="~{include :: cssGpPluginOpenLayers}"></script>
+-->
+<script th:replace="~{include :: cssIgnClassic}"></script>
+<script th:replace="~{include :: cssIgnExt}"></script>
+
+
 <style>
 .ol-rotate {
 	top: 4em;
