transhumances option affichage retrait vers Dépôt

--- a/src/main/resources/templates/rucher/rucherDetail.html
+++ b/src/main/resources/templates/rucher/rucherDetail.html
@@ -102,7 +102,7 @@
 					th:href="@{'/evenement/rucher/commentaire/cree/'+${rucher.id}}"
 					class="bi-chat-text" th:title="#{evenementCommentaire}"
 					aria-hidden="true"></a> &nbsp; <a
-					th:href="@{'/rucher/historique/'+${rucher.id}+'/true'}"
+					th:href="@{'/rucher/historique/'+${rucher.id}+'/true/false'}"
 					class="bi-truck-front" th:title="#{transhumances}"
 					aria-hidden="true"></a> <a
 					th:href="@{'/rucher/graphtranshum/'+${rucher.id}}"
