--- a/src/main/resources/templates/rucher/ruchersHisto.html
+++ b/src/main/resources/templates/rucher/ruchersHisto.html
@@ -7,10 +7,17 @@
 const buttontextprint = /*[[#{buttontextprint}]]*/null;
 const buttontextcol = /*[[#{buttontextcol}]]*/null;
 const transhumances = /*[[#{transhumances}]]*/null;
+let depot = /*[[${depot}]]*/null;
 document.addEventListener('DOMContentLoaded', () => {
+	const lH = location.href;
+	const loc = lH.slice(0, lH.lastIndexOf('/', lH.length - 7) + 1);
+	const depotTxt = 'Depot';
 	document.getElementById('groupe').addEventListener('click', event => {
-		location = location.href.slice(0, location.href.lastIndexOf('/'))
-			+ '/' + event.target.checked;
+		location = loc + event.target.checked + '/' + depot;
+	});
+	document.getElementById('depot').addEventListener('click', () => {
+		depot = !depot;
+		table.draw();
 	});
 	const table = new DataTable('#transhumances', {
 		scrollX: true,
@@ -40,6 +47,11 @@ document.addEventListener('DOMContentLoaded', () => {
 			}
 		}
 	});
+	
+	$.fn.dataTable.ext.search.push(
+			function (settings, searchData) {
+				return depot || (searchData[3] !== depotTxt);
+			});
 });
 </script>
 </head>
@@ -58,7 +70,11 @@ document.addEventListener('DOMContentLoaded', () => {
 					th:title="#{Doc}" target="_blank" aria-hidden="true"></a> <span
 					class="padicons"> <input type="checkbox" id="groupe"
 					th:title="#{grouperJour}" th:checked="${group}"> <label
-					for="groupe" th:text="#{grouper}"></label>
+					for="groupe" th:text="#{grouper}"></label> <input type="checkbox"
+					id="depot" th:title="#{afficherDepot}" th:checked="${depot}">
+					<label for="depot" th:text="#{depot}"></label>
+
+
 				</span>
 			</div>
 		</div>
